Allocate Executors at the start and then on demand
This only qsubs an executor job (that too without check for correct
directory which is a real problem) and incorrect options. But we
now know how to get executors registered with the back-end which
will later be used to launch tasks.

--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,13 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.pbspro.pbs</groupId>
-      <artifactId>pbs-scala_0.0.1</artifactId>
-      <version>0.0.1</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/lib/pbs-scala/target/pbs-scala-0.0.1.jar</systemPath>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.pbspro.pbs</groupId>-->
+      <!--<artifactId>pbs-scala_0.0.1</artifactId>-->
+      <!--<version>0.0.1</version>-->
+      <!--<scope>system</scope>-->
+      <!--<systemPath>${project.basedir}/lib/pbs-scala/target/pbs-scala-0.0.1.jar</systemPath>-->
+    <!--</dependency>-->
 
     <dependency>
       <groupId>org.apache.spark</groupId>
