--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@
   <parent>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-parent_2.11</artifactId>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.5.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>spark-pbs_0.0.1</artifactId>
+  <artifactId>spark-pbs_2.11</artifactId>
   <packaging>jar</packaging>
-  <name>Spark Integration for PBSPro</name>
+  <name>PBSPro Integration</name>
 
   <dependencies>
     <dependency>
@@ -42,14 +42,6 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
-
-    <!--<dependency>-->
-      <!--<groupId>org.pbspro.pbs</groupId>-->
-      <!--<artifactId>pbs-scala_0.0.1</artifactId>-->
-      <!--<version>0.0.1</version>-->
-      <!--<scope>system</scope>-->
-      <!--<systemPath>${project.basedir}/lib/pbs-scala/target/pbs-scala-0.0.1.jar</systemPath>-->
-    <!--</dependency>-->
 
     <dependency>
       <groupId>org.apache.spark</groupId>
