--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ dist: xenial
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y gcc make libtool libhwloc-dev libx11-dev libxt-dev libedit-dev libical-dev ncurses-dev perl postgresql-server-dev-all python-dev tcl-dev tk-dev swig libexpat-dev libssl-dev libxext-dev libxft-dev autoconf automake
+  - sudo apt-get install -y gcc make libtool libhwloc-dev libx11-dev libxt-dev libedit-dev libical-dev ncurses-dev perl postgresql-server-dev-9.6 python-dev tcl-dev tk-dev swig libexpat-dev libssl-dev libxext-dev libxft-dev autoconf automake
 
 install:
   - dev/install_deps.sh
